-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.915 2011-03-30 15:34:28 jluis Exp $
-----------------------------------------------------------------------------------------

2011-03-30	jluis
	* gmt_esri_io.c:	Also detects the Arc/Info float binary format (GRIDFLOAT)
	* grdimage_func.c:	Overzealous -C testing prevented the usage of an image via -Dr 

2011-03-29	pwessel
	* surface_func.c:	Improved gridding of pixel-registered grids by temporarily adding
				an extra row/col (which are removed before output).  This ensures
				better factoring throughout the multigrid process.

2011-03-28	remko
	* gmt_init.c:		New format of -i option: -i<cols>[l][s<scale>][o<offset][,...].
	* common_options.txt, explain_-icols_full.txt, gmt_synopsis.h:	---"---

2011-03-28	pwessel
	* *.[ch]:		Replace STAT with GMT_STAT to avoid name clashes on some systems.
	* misc/gmt2kml_func.c	Ensure pen is given in points and >= 1 in width.
	* misc/gmt2kml.txt:	Explain how pen needs to be set.
	* pscontour_func.c:	Got wrong contour level when some segments along edges were skipped.
				Now use same z-slop (small) as in grdcontour_func.c
	* gmt_support.c:	Not not handle cases like zmin color zmax - [i.e., repeat the color],
				causing strange color ramps.
	* gmt_io.c:		The polygon status from OGR headers (@H, @P) did not get copied into
				the polygon structure headers.
	* gmt_init.c:		Temp array double p[6] in -R parsing was not initialized and could have
				junk for the zmin/zmax values (the others get set directly).

2011-03-28	remko
	* ps2raster_func.c:	Automatically add GS option -dMaxBitmap=100000000 with -TG

2011-03-27	remko
	* doc/html/index.html:	Now created (linked) out of gmt_services.html
	* doc/GNUmakefile:	Removed everything dealing with HMTL documentation

2011-03-27	jluis
	* gmt_esri_io.c:	Extend the ESRI format to also read ESRI .HDR format. 
				That is a raw binary + a .hdr ascii header file.